src/routes/game/play/Play.css
/* :root {
  --aspect: 1920px;
} */

html,
body {
  padding: 0;
  margin: 0;
  width: 100vw;
  width: 100dvw;
  height: 100vh;
  height: 100dvh;
  --card-size: calc(13vh * var(--card-scale));
  --card-size: calc(13dvh * var(--card-scale));
}

@media (orientation: portrait) {
  html,
  body {
    --card-size: calc(12vw * var(--card-scale));
    --card-size: calc(12dvw * var(--card-scale));
  }
}

.centering {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  user-select: none;
}

@media (orientation: landscape) {
  .app {
    height: 100%;
    width: 100%;
    font-size: calc(1.5vh - 2px);
    font-size: calc(1.5dvh - 2px);
  }
}

@media (orientation: portrait) {
  .app {
    aspect-ratio: 16/9;
    font-size: calc(1.5vw + 3px);
    font-size: calc(1.5dvw + 3px);
  }
}

.app {
  position: relative;
  display: flex;
  flex-flow: row nowrap;
  margin: auto;
}

.gameZone {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  order: 2;
  width: 100%;
  margin-bottom: 1.5vh;
  margin-bottom: 1.5dvh;
}

@media (orientation: portrait) {
  .gameZone {
    margin-bottom: 0;
  }
}

.defaultToast {
  background-color: var(--near-black);
  padding: 1.5vh;
  border: 1px solid var(--primary);
  border-radius: 10px;
  color: var(--primary);
}

